# polyview

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  TODO.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build_pypi.yml  doc.yml
_sources/: index.rst.txt
_sources/augmentation/: index.rst.txt  multi_kernels.rst.txt  random_projections.rst.txt
_sources/base/: index.rst.txt
_sources/cluster/: index.rst.txt  mv_coreg_sc.rst.txt  mv_cotrain_sc.rst.txt  mv_kmeans.rst.txt
_sources/datasets/: index.rst.txt  multiview_latent_gaussian.rst.txt
_sources/embedd/: gcca.rst.txt  mcca.rst.txt
_sources/examples/: index.rst.txt  pipeline_workflows.rst.txt
_sources/fusion/: index.rst.txt  kernel_fusion.rst.txt  late.rst.txt
_sources/misc/: contributing.rst.txt
_sources/pipeline/: polypipeline.rst.txt
_static/: force-light.js  styling.css
augmentation/: index.html  multi_kernels.html  random_projections.html  random_subspace.html
base/: index.html
cluster/: index.html  mv_coreg_sc.html  mv_cotrain_sc.html  mv_kmeans.html  mv_nmf.html
datasets/: index.html  multiview_latent_gaussian.html
docs/: requirements.txt
docs/source/: conf.py  index.rst
embedd/: gcca.html  index.html  mcca.html
examples/: index.html  pipeline_workflows.html
fusion/: early.html  index.html  kernel_fusion.html  late.html
misc/: contributing.html  index.html
pipeline/: index.html  polypipeline.html
polyview/: __init__.py  base.py
polyview/augmentation/: __init__.py  multi_kernels.py  (+2 more)
(+42 files in other folders)
